# desysflow-oss

./: .env.example  .gitignore  README.md  article.MD  desysflow.config.yml  letsvibedesign  main.py  pyproject.toml
.github/workflows/: checkpoints.yml
agents/: cloud_infra.py  critic.py  critic_judge.py  diagram.py  diagram_quality.py  extractor.py  generator.py  report_generator.py  reviser.py
api/: routes.py
desysflow_cli/: __main__.py
docs/: agentic-architecture.md  architecture.md  cli.md  examples.md  getting-started.md  project-overview.md
graph/: workflow.py
schemas/: models.py
scripts/: api.sh  bootstrap.sh  dev.sh  install.sh  ui.sh
services/: conversation_store.py  guardrails.py  llm.py  session_store.py  storage_paths.py
studio/: package-lock.json
studio/src/components/: HLDReport.test.jsx  MessageContent.test.jsx
tests/: test_cli_interactive.py  test_codebase_analysis.py  test_llm_limits.py  test_parser.py  test_storage_config.py  test_workflow_contract.py
ui/: index.html
ui/src/: App.css  App.jsx  api.js
ui/src/components/: HLDReport.jsx  LLDReport.jsx  LoadingState.jsx  MermaidDiagram.jsx  MessageContent.jsx  TechDocument.jsx
utils/: codebase_analysis.py  design_doc.py  parser.py  workflow_contract.py
