[project]
name = "desysflow"
version = "1.0.0"
description = "DesysFlow OSS: source-first system design CLI and backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "ddgs>=9.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
desysflow = "desysflow_cli.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "api*", "desysflow_cli*", "graph*", "rules*", "schemas*", "services*", "templates*", "utils*"]
